Fix colouring for footer text
Before it was coloured based on the light theme but we need it to adapt to each theme. On the dark theme the text was too dark and made difficult to read.

--- a/src/api/app/assets/stylesheets/webui/sponsors.scss
+++ b/src/api/app/assets/stylesheets/webui/sponsors.scss
@@ -4,7 +4,6 @@
 
     font-size: 0.9rem;
     text-transform: uppercase;
-    color: $gray-700;
     font-weight: bold;
 }
 
