--- a/src/api/app/assets/stylesheets/webui/sticky-footer.scss
+++ b/src/api/app/assets/stylesheets/webui/sticky-footer.scss
@@ -7,26 +7,12 @@ body {
 }
 
 #footer {
-  strong {
-    color: $gray-300;
-  }
-
   & a {
     font-size: .9rem;
-    color: $gray-400;
-
-    &:hover {
-        color: $gray-300;
-    }
   }
 
   ul {
     @extend .list-unstyled;
     @extend .mt-1;
-  }
-  #footer-legal {
-    p {
-      color: $gray-300;
-    }
   }
 }
